hphp/hack/test/typecheck/inout/bad_inout_use_call4.php.exp
File "bad_inout_use_call4.php", line 40, characters 5-12:
Invalid argument (Typing[4110])
File "bad_inout_use_call4.php", line 9, characters 18-19:
This is an object of type C2
File "bad_inout_use_call4.php", line 20, characters 18-19:
It is incompatible with an object of type C1
